@@ -1,3 +1,9 @@
+Mon Oct 06 19:09:23 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimNotify.cpp:
+	* src/QGaimNotify.h:
+	  - Added the UI for the notify formatted dialog.
+
 Mon Oct 06 16:22:28 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBuddyList.cpp:
